--- a/.github/workflows/scheduled-commit.yml
+++ b/.github/workflows/scheduled-commit.yml
@@ -9,13 +9,15 @@ on:
   workflow_dispatch:
   # Run at 20:02 UTC
   schedule:
-   - cron: '7 16,17,18,19,20 * * *'
+   - cron: '7 16,17,18,19,20,21,22,23 * * *'
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
+    # Conditionally run job
+    if: RANDOM%2==0
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
