--- a/.github/workflows/scheduled-commit.yml
+++ b/.github/workflows/scheduled-commit.yml
@@ -17,7 +17,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # Conditionally run job
-    if: ${{RANDOM % 2}}
+    if: ${{$RANDOM % 2}}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
