--- a/.github/workflows/scheduled-commit.yml
+++ b/.github/workflows/scheduled-commit.yml
@@ -16,8 +16,6 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # Conditionally run job
-    if: ${{$RANDOM % 2}}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -38,9 +36,11 @@ jobs:
           git config user.name "NoahAppelbaum"
           git config user.email "noahappelbaum@gmail.com"
       
-      - name: commit
+      - name: commit conditionally
         run: |
-          # Stage the file, commit and push
+          # Stage the file, commit and push, conditionally
+          if $(($RANDOM % 2)); then
           git add time.txt
           git commit -m "Updated time file `date`"
           git push origin main
+          fi
